--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.1",
+    "@hookform/resolvers": "^3.9.0",
     "antd": "^5.20.2",
     "axios": "^1.7.4",
     "next": "14.2.5",
